--- a/paginas/usuario/cadastro-usuario.html
+++ b/paginas/usuario/cadastro-usuario.html
@@ -56,7 +56,7 @@
 
         <div class="input-container">
           <label class="label" for="cep">CEP <span class="info">(Necessário)</span></label>
-          <input class="input" required type="text" name="cep" id="cep" data-tipo="cep"/>
+          <input class="input" required type="text" name="cep" id="cep" data-tipo="cep" pattern="[\d]{5}-?[\d]{3}"/>
         </div>
 
         <div class="input-container">
