--- a/paginas/produto/cadastro-produto.html
+++ b/paginas/produto/cadastro-produto.html
@@ -8,6 +8,7 @@
     <script
       src="https://github.com/codermarcos/simple-mask-money/releases/download/v3.0.0/simple-mask-money.js"></script>
     <script type="module" src="../../services/app.js"></script>
+    <script src="https://github.com/codermarcos/simple-mask-money/releases/download/v3.0.1/simple-mask-money.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cadastro de Produto</title>
   </head>
